--- a/columnistas.html
+++ b/columnistas.html
@@ -23,7 +23,29 @@
         <script src="js/bootstrap.min.js"></script> 
 	</head>
 <body>
-<!--Columnistas-->
+    <!-- MENU -->
+	        <nav class="navbar navbar-inverse">
+		        <div class="container">
+			        <div class="navbar-header">
+                      <!--aqui contenido-->
+                      <img src="image/logo-grupo-la-republica.png" width="150px" alt="">
+                       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-menu"></span>
+                        </button>
+                    </div><!--cierre de navbar header-->
+                    
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                          <li><a href="index.html">HOME</a></li>
+                           <li><a href="columnistas.html">COLUMNISTAS</a></li>
+                           <li><a href="contacto.html">CONTACTO</a></li>
+                        </ul>
+                    </div><!--cierre de collapse-->
+                </div><!--cierre de container-->
+            </nav>
+    <!-- END MENU -->
  <!-- HEADER -->
     <header>
         <section class="banner-header">
